--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3604,7 +3604,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
   color: #7987a1;
   pointer-events: none;
   cursor: auto;
-  background-color: #fff;
+  /* background-color: #fff; */
   border-color: #dedcfb; }
 
 .pagination-lg .page-link {
@@ -4191,7 +4191,7 @@ a.badge-purple-gradient.focus {
 
 .media {
   display: flex;
-  align-items: flex-start; }
+  align-items: center; }
 
 .media-body {
   flex: 1; }
@@ -8549,7 +8549,8 @@ a.text-dark:hover, a.text-dark:focus {
   margin-left: 1px; }
 
 .page-item.active .page-link {
-  background-color: #3858f9; }
+  background-color: #3858f9; 
+}
 
 .page-link {
   color: #817ba7;
@@ -8584,10 +8585,12 @@ a.text-dark:hover, a.text-dark:focus {
     background-color: rgba(255, 255, 255, 0.08); }
 
 .pagination-primary .page-item.active .page-link {
-  background-color: #3858f9; }
+  background-color: #3858f9; 
+}
 
 .pagination-success .page-item.active .page-link {
-  background-color: #0ba360; }
+  background-color: #0ba360; 
+}
 
 .pagination-circled .page-item + .page-item {
   margin-left: 5px; }
@@ -8985,7 +8988,7 @@ a.text-dark:hover, a.text-dark:focus {
       background-size: 65%;
       background-repeat: no-repeat;
       background-position: 55% 45%;
-      background-color: #3858f9;
+      background-color: #03953e;
       line-height: 17px;
       display: none; }
     .ckbox span:empty {
@@ -12122,13 +12125,16 @@ body {
   height: inherit; }
 
 .dataTables_paginate .page-item.active .page-link {
-  background-color: inherit; }
+  background-color: inherit;
+ }
 
 .dataTables_wrapper .dataTables_paginate .paginate_button.focus {
-  background: #3858f9; }
+  background: #3858f9; 
+}
 
 .dataTables_wrapper .dataTables_paginate .page-item.disabled .page-link {
-  background-color: #eceff3; }
+  /* background-color: #eceff3;  */
+}
 
 table.dataTable tfoot th, table.dataTable tfoot td {
   padding: 10px 18px 6px 18px;
